# pfe-d2f-enseignants

./: .coverage  .dockerignore  .env.example  .gitignore  ACCESSING_POSTGRESQL_DATABASE.md  ANALYSE_COMPLETE_D2F.md  AUDIT_DSI_COMPLET_2025-2026.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  CRITICAL_BUG_FIX.md  DATABASE_FIX_SOLUTION.md  DB_AUTH_FIX_GUIDE.md  DSI_COMPLIANCE_REPORT.md  FINAL_MIGRATION_REPORT.md  FIXES_SUMMARY.txt  FORMATION_MODULE_QUALITY_IMPROVEMENTS.md  FORMATION_SERVICE_AUDIT.md  FORMATION_SERVICE_FIXES_SUMMARY.md  FORMATION_SERVICE_PHASE2_REPORT.md  FRONTEND_BACKEND_INTEGRATION_ISSUES.md  FRONTEND_FIXES_COMPLETED.md  FRONTEND_IMPROVEMENTS_CHECKLIST.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  HashGen.java  IMPLEMENTATION_CHECKLIST.md  MANUAL_FIX_INSTRUCTIONS.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE_2_TESTING_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PLAN_ACTION_COURT_TERME.md  PROJECT_COMPLETION_SUMMARY.md  RAPPORT_FRONTEND_FORMATIONS.md  README.md  REPORT_SERVICES.md  SEANCE_REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  TESTING_AND_VALIDATION.md  VERIFICATION_ROLES_ROUTES.md  VERIFICATION_SERVICES.md  add_missing_column.sql  (+34 more)
esprit_D2F-predictive-analytics/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  coverage.xml  junit-results.xml  pyproject.toml  requirements.txt  sonar-project.properties
esprit_D2F-predictive-analytics/.scannerwork/: report-task.txt
esprit_D2F-predictive-analytics/app/: __init__.py  config.py  main.py
esprit_D2F-predictive-analytics/init_db/: README.md  V1__baseline.sql  V2__indexes_and_constraints.sql  (+4 more)
(+2573 files in other folders)
