[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2f-predictive-analytics"
version = "1.0.0"
description = "D2F Predictive Analytics & Recommendations Microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "joblib>=1.4.2",
    "xgboost>=2.1.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "httpx>=0.27.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
